--- a/index.html
+++ b/index.html
@@ -4,44 +4,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Module 7</title>
 </head>
 
 <body>
-    <ul id="categories">
-        <li class="item">
-            <h2>Животные</h2>
+    <div class="container">
+        <h2 class="task">task-1</h2>
+        <ul id="categories">
+            <li class="item">
+                <h2>Животные</h2>
 
-            <ul>
-                <li>Кот</li>
-                <li>Хомяк</li>
-                <li>Лошадь</li>
-                <li>Попугай</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Продукты</h2>
+                <ul>
+                    <li>Кот</li>
+                    <li>Хомяк</li>
+                    <li>Лошадь</li>
+                    <li>Попугай</li>
+                </ul>
+            </li>
+            <li class="item">
+                <h2>Продукты</h2>
 
-            <ul>
-                <li>Хлеб</li>
-                <li>Петрушка</li>
-                <li>Творог</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Технологии</h2>
+                <ul>
+                    <li>Хлеб</li>
+                    <li>Петрушка</li>
+                    <li>Творог</li>
+                </ul>
+            </li>
+            <li class="item">
+                <h2>Технологии</h2>
 
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node</li>
-            </ul>
-        </li>
-    </ul>
-    <ul id="ingredients"></ul>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Node</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="container">
+        <h2 class="task">task-2</h2>
+        <ul id="ingredients"></ul>
+    </div>
+    <div class="container">
+        <h2 class="task">task-3</h2>
+        <ul id="gallery"></ul>
+    </div>
+    <div id="counter" class="container">
+        <h2 class="task">task-4</h2>
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">0</span>
+        <button type="button" data-action="increment">+1</button>
+    </div>
+    <div class="container">
+        <h2 class="task">task-5</h2>
+        <input type="text" placeholder="Ваше имя?" id="name-input" />
+        <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+    </div>
+    <div class="container">
+        <h2 class="task">task-6</h2>
+        <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+    </div>
+    <div class="container">
+        <h2 class="task">task-7</h2>
+        <input id="font-size-control" type="range" />
+        <br />
+        <span id="text">Абракадабра!</span>
+    </div>
+    <div class="container">
+        <h2 class="task">task-8</h2>
+        <div id="controls">
+            <input type="number" min="0" max="100" step="1" />
+            <button type="button" data-action="render">Создать</button>
+            <button type="button" data-action="destroy">Очистить</button>
+        </div>
 
+        <div id="boxes"></div>
+    </div>
 
     <script type="module" src="js/task-1.js"></script>
     <script type="module" src="js/task-2.js"></script>
